# symbolic-dag

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
demo/: README.md  core.py  desktop.py  pyproject.toml
demo/static/: app.js  index.html  style.css
docs/: README.md  tutorial-1-installation-and-first-cmi.md  tutorial-2-proving-conditional-independence.md  tutorial-3-wirtinger-gradients-and-kkt.md  tutorial-4-builder-and-cmidag-crosscheck.md
docs/figures/: hero.tex  relay.tex
docs/internal/: fisher-crb.md
examples/: README.md  gadgets.py  mac_cmi.py  precoder_gradient.py
symbolic_dag/: __init__.py  _fisher.py  assumptions.py  builder.py  expr.py  handoff.py  information.py  krecursion.py  latex.py  matderiv.py  numeric.py  objectives.py  rewrite.py  solve.py  verify.py
tests/: cmidag_oracle.py  test_builder.py  test_cmidag_crosscheck.py  test_display.py  test_fisher.py  test_handoff.py  test_information.py  test_krecursion.py  test_latex.py  test_matderiv.py  test_mmse_kkt.py  test_multinode_gradient.py  test_objectives.py  test_rewrite.py  test_trace_gradient.py  test_verify.py
