[project]
name = "symbolic-dag"
version = "0.1.0"
description = "Symbolic conditional mutual information, simplification and Wirtinger differentiation for linear Gaussian-DAG networks; symbolic sibling of cmi-dag."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Tadashi Wadayama", email = "wadayama@nitech.ac.jp" },
]
keywords = [
    "conditional-mutual-information",
    "gaussian-dag",
    "symbolic-computation",
    "wirtinger-calculus",
    "mimo",
    "information-theory",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=2.4.6",
    "sympy>=1.14.0",
    "torch>=2.12.0",
]

[project.urls]
Homepage = "https://github.com/wadayama/symbolic-dag"
Repository = "https://github.com/wadayama/symbolic-dag"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["symbolic_dag"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
